# lotus-dataset

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
examples/: build_lotus.py
lotus_dataset/: __init__.py  dataset.py  wikidata.py
lotus_dataset/exceptions/: __init__.py  unavailable_entry.py  version_exception.py
lotus_dataset/settings/: __init__.py  dataset_settings.py
lotus_dataset/settings/versions/: v1.json  v10.json  v2.json  v3.json  v4.json  v5.json  v6.json  v7.json  v8.json  v9.json
lotus_dataset/utils/: __init__.py  download_objective.py
