[project]
name = "lotus-dataset"
version = "0.1.0"
description = "A simple package to download and manage the different versions of the LOTUS database."
authors = [{ name = "Marco Visani", email = "marco.visani@unifr.ch" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "compress-json>=1.1.0",
    "downloaders>=1.0.21",
    "networkx>=3.4.1",
    "pandas>=2.2.3",
    "pip>=24.2",
    "pyarrow>=17.0.0",
    "setuptools>=75.2.0",
]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]

[tool.uv]
dev-dependencies = ["jupyterlab>=4.2.5", "lotus-dataset"]

[tool.uv.sources]
lotus-dataset = { workspace = true }

[tool.setuptools.packages.find]
exclude = ["downloads"]
